--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "robofriends",
-  "homepage": "https://jelelahmed.github.io/robofriends-pwa",
+  "homepage": "https://jelelahmed.github.io/robo-pwa",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "gh-pages": "^3.1.0",
     "react": "^16.8.4",
