--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://jelelahmed.github.io/robo-pwa",
+  "homepage": "https://jelelahmed.github.io/robopwa",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
